implementations/rust/ockam/ockam/tests/node/fail_if_more_than_one_arg.stderr
error: the function must have exactly one argument
 --> $DIR/fail_if_more_than_one_arg.rs:4:7
  |
4 | async fn main(mut c: ockam::Context, _x: u64) {
  |       ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_if_more_than_one_arg.rs:3:1
  |
3 | / #[ockam::node]
4 | | async fn main(mut c: ockam::Context, _x: u64) {
5 | |     c.stop().await.unwrap();
6 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node/fail_if_more_than_one_arg.rs`
